[gd_scene load_steps=7 format=3 uid="uid://2qajcaynfune"]

[ext_resource type="Theme" uid="uid://dnf5p8ny2pgfo" path="res://Scenes/Inventory/theme.tres" id="1_lfx68"]
[ext_resource type="Script" path="res://Scenes/Inventory/inventory.gd" id="1_sj1dp"]
[ext_resource type="PackedScene" uid="uid://b7mox5atgvt5w" path="res://Scenes/Inventory/slot.tscn" id="4_xbakx"]
[ext_resource type="PackedScene" uid="uid://d16u2xadhx4bh" path="res://Scripts/item_info_display.tscn" id="5_ykwxk"]
[ext_resource type="Texture2D" uid="uid://ddmhcjcohjhbk" path="res://Asset/GameUI.png" id="6_3osmu"]
[ext_resource type="Script" path="res://Scenes/Inventory/UpgradeMenu/upgrade_box.gd" id="6_x8bdh"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_lfx68")
script = ExtResource("1_sj1dp")

[node name="EquipedItemSlot" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(500, 200)
layout_mode = 0
offset_left = 28.0
offset_top = 87.0
offset_right = 500.0
offset_bottom = 271.0
texture = ExtResource("6_3osmu")
region_rect = Rect2(256, 144, 128, 64)

[node name="SlotContainers" type="GridContainer" parent="EquipedItemSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -74.0
offset_right = 204.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Slot" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot2" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot3" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot4" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot5" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot6" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot7" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot8" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot9" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Slot10" parent="EquipedItemSlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6

[node name="InventorySlot" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 560.0
offset_right = 513.0
offset_bottom = 965.0
texture = ExtResource("6_3osmu")
region_rect = Rect2(160, 144, 80, 112)

[node name="SlotContainers" type="GridContainer" parent="InventorySlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -157.0
offset_right = 197.5
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="Slot" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot2" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot3" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot4" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot5" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot6" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot7" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot8" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot9" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot10" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot11" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot12" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot13" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot14" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot15" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot16" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot17" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot18" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot19" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Slot20" parent="InventorySlot/SlotContainers" instance=ExtResource("4_xbakx")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ItemInfoDisplay" parent="." instance=ExtResource("5_ykwxk")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 541.0
offset_top = 68.0
offset_right = 991.0
offset_bottom = 968.0

[node name="ClickTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[node name="UpgradeBox" type="NinePatchRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 0
offset_left = 22.0
offset_top = 330.0
offset_right = 496.0
offset_bottom = 525.0
texture = ExtResource("6_3osmu")
region_rect = Rect2(256, 144, 128, 64)
script = ExtResource("6_x8bdh")

[node name="SlotContainer" type="HBoxContainer" parent="UpgradeBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -79.0
offset_right = 206.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeSlot1" parent="UpgradeBox/SlotContainer" instance=ExtResource("4_xbakx")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="UpgradeSlot2" parent="UpgradeBox/SlotContainer" instance=ExtResource("4_xbakx")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="UpgradeSlot3" parent="UpgradeBox/SlotContainer" instance=ExtResource("4_xbakx")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="BtnUpgrade" type="Button" parent="UpgradeBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -83.0
offset_right = 75.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
text = "Upgrade"

[node name="BtnClose" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 107.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
text = "Next"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 50.0
offset_right = 410.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 32
text = "Equipement"

[node name="Caution" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
z_index = 2
layout_mode = 0
offset_left = 194.0
offset_top = 413.0
offset_right = 858.0
offset_bottom = 621.0
texture = ExtResource("6_3osmu")
region_rect = Rect2(256, 144, 128, 64)

[node name="Label" type="Label" parent="Caution"]
layout_mode = 2
offset_left = 48.0
offset_top = 25.0
offset_right = 606.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Please clear your inventory to have at least one slot."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="UpgradeBox/BtnUpgrade" to="UpgradeBox" method="_on_btn_upgrade_pressed"]
[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
